# mrcepid-collapsevariants

./: .gitignore  Readme.developer.md  Readme.md  dxapp.json  pyproject.toml
collapsevariants/: collapse_logger.py  collapse_utils.py  collapse_variants.py  collapsevariants.py  filtering.py  ingest_data.py  parallelization_wrappers.py  snp_list_generator.py  snp_list_merger.py
collapsevariants/genotype_matrix/: genotype_matrix.py
collapsevariants/snp_list_generator/: filtering_mode.py  snp_list_generator.py  stat_dictionary.py
collapsevariants/tool_parsers/: bolt_parser.py  filtering.py  mask_generators.py  regenie_parser.py  saige_parser.py  staar_parser.py  tool_parser.py
collapsevariants/tool_parsers/R_resources/: buildSTAARmatrix.R
collapsevariants/utilities/: collapse_logger.py  collapse_utils.py  ingest_data.py  parallelization_wrappers.py
resources/collapsevariants/: collapse_logger.py  collapse_resources.py  filtering.py  ingest_data.py  snp_list_generator.py  snp_list_merger.py
resources/collapsevariants/tool_parsers/: bolt_parser.py  saige_parser.py  (+1 more)
sandbox/: set_up_git.ipynb
sandbox/.ipynb_checkpoints/: set_up_git-checkpoint.ipynb
src/: mrcepid-collapsevariants.py
src/.ipynb_checkpoints/: mrcepid-collapsevariants-checkpoint.py
test/: build_bgen_list.py  collapsevariants_test.py  collapsevariants_test_old.py  simuPop.Dockerfile  simulate_chromosome.py  simulate_data.R  test_collapse_logger.py  test_collapse_utils.py  test_collapse_variants.py  test_ingest_data.py  test_parallelization_wrappers.py  test_snp_list_generator.py
test/expected_outputs/: chr1_chunk1_expression_log.txt  chr1_chunk1_gene_list_log.txt  chr1_chunk1_log.txt  chr1_chunk1_snp_list_log.txt  chr1_chunk2_expression_log.txt  chr1_chunk2_gene_list_log.txt  chr1_chunk2_log.txt  chr1_chunk2_snp_list_log.txt  chr1_chunk3_expression_log.txt  chr1_chunk3_gene_list_log.txt  chr1_chunk3_log.txt  chr1_chunk3_snp_list_log.txt
test/test_data/: correct_log.txt  gene_list.pheno_1_MISS.txt  gene_list.pheno_1_PTV.txt  gene_list.pheno_2_PTV.txt  gt_beta.info  sim_pheno.txt  snp_list.pheno_1_MISS.txt  snp_list.pheno_1_PTV.txt  snp_list.pheno_2_MISS.txt  test_add_covariates.covariates
(+5 files in other folders)
