[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "collapsevariants"
version = "1.2.2"
description = ""
authors = [ "Eugene Gardner <eugene.gardner@mrc-epid.cam.ac.uk>",]
readme = "Readme.md"
repository = "https://github.com/mrcepid-rap/mrcepid-collapsevariants"
licence = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
dxpy = "0.346.0"
pandas = "1.5.2"
numpy = "1.23.2"
general-utilities = {git = "https://github.com/mrcepid-rap/general_utilities.git", rev = "v1.5.1"}
