[project]
name = "mrcepid-collapsevariants"
version = "2.1.0"
description = "Generates dummy input files for various association testing software"
readme = "Readme.md"
authors = [
    {name = "Eugene Gardner"},
    {name = "Alish Palmos"}]
requires-python = "~=3.8.10"
dependencies = [
    "bgen==1.9.0",
    "dxpy==0.346.0",
    "general-utilities",
    "numpy==1.23.2",
    "pandas==1.5.2",
    "pytest==7.4.4",
    "pytest-cov~=5.0",
    "scipy==1.10.1",
]

[tool.uv.sources]
general-utilities = { git = "https://github.com/mrcepid-rap/general_utilities.git", branch = "feature/add_genotype_matrix" }

[tool.coverage.run]
omit = [
    "test/*", # Exclude all test files
    "tests/*", # If your tests folder is named "tests"
]
